@@ -2,6 +2,7 @@
 
 = 3.3.0 - 2021-xx-xx =
 * Update - Updated @woocommerce/components to remove ' from negative numbers on csv files
+* Add - Add compatibility between Multi-Currency and WooCommerce Bookings.
 * Fix - Do not show default currency selector on Account Details page when only one currency is available.
 
 = 3.2.3 - 2021-11-01 =
